--- a/web-app/src/App.css
+++ b/web-app/src/App.css
@@ -2,6 +2,11 @@
   text-align: center;
 }
 
+.link-tag {
+  color: black;
+  text-decoration: none;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
